--- a/style.css
+++ b/style.css
@@ -1,46 +1,67 @@
- * {  
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+body{
+    font-family: Arial, Helvetica, sans-serif;
     color: #777;
     background:#777;
-    width: 960px;
     font-size: 18px;
-    float: left;
-    box-sizing: border-box;
-    margin-bottom: 10px; 
     text-align: center;
 }
-header, nav, footer{
-    padding: 20px 0px;
+header, nav, #left, #right,footer, h4, p{
     background: #ebebeb;
+}
+header{
+    margin: auto;
+    width: 960px;
+    position: relative;
+    top:0;
+    padding: 20px 0px 20px 0px;
 }
 footer{
+    margin: 10px auto 0px auto;
+    width: 960px;
+    position: relative;
+    bottom:0;
+    padding: 20px 0px 20px 0px;
     clear: both;
-} 
-#right{
-    margin-left: 10px;
+}
+nav{
+    margin: 10px auto;
+    width: 960px;
+    position: relative;
+    padding: 20px 0px 20px 0px;
+}
+.split-box{
+    width: 960px;
+    margin: 0px auto;
+}
+#left{
     width: 455px;
-    height: 200px; 
-    background: #ebebeb;
-}  
-
- #left{
-    width: 495px;
+    position: relative;
+    padding: 20px 10px 20px 10px;
+    margin-bottom: 10px; 
+    overflow:auto;
+    float: left;
     height: 200px;
-    background: #ebebeb;
-    padding: 10px 0px;
+}
+#right{
+    float: left;
+    margin-left: 10px; 
+    margin-bottom: 10px; 
+    width: 475px;
+    height: 200px;
+    padding: 20px 0px 20px 0px;
 }
 #div0{
+    background:#777;
     color: #ebebeb;
-    background: #777;
-    margin: 10px;
-    padding-top: 10px ;
-    width: 475px;
+    position: relative;
+    margin: auto;
+    padding: 20px 20px 20px 20px;
     overflow: auto;
 }
 h4, p{
-    background: #ebebeb;
+    position: relative;
+    margin: 10px auto;
+    padding: 10px 0px 10px 0px;
     color: #777;
-    margin: 10px;
-    padding: 10px 0px; 
-    width: 455px;
+
 }
